Added more screenshots

--- a/src/CustomFontsNavigationPage/CustomFontsNavigationPage/CustomFontsNavigationPage.iOS/Info.plist
+++ b/src/CustomFontsNavigationPage/CustomFontsNavigationPage/CustomFontsNavigationPage.iOS/Info.plist
@@ -46,6 +46,10 @@
       <string>Icon-Small@2x</string>
       <string>Icon-Small@3x</string>
     </array>
+    <key>UIAppFonts</key>
+    <array>
+      <string>Trashtalk.ttf</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
   </dict>
